# ControlPanel

./: .gitignore  .gitmodules  ControlPanel.sln  README.md
ControlPanel.Agent.Linux/: ControlPanel.Agent.Linux.csproj  IconIndex.cs  IconLocator.cs  LinuxAudioAgentHost.cs  LinuxAudioAgentSystemInitializer.cs  PipeWireAudioAgent.cs
ControlPanel.Agent.Shared/: ControlPanel.Agent.Shared.csproj  IAudioAgent.cs  IAudioAgentHost.cs  IAudioAgentSystemInitializer.cs
ControlPanel.Agent.Windows/: AudioSessionsCollection.cs  AudioSessionsEnumerator.cs  ConsoleWindow.cs  ControlPanel.Agent.Windows.csproj  IconLocator.cs  SessionIdMapper.cs  WindowsAudioAgent.cs  (+2 more)
ControlPanel.Device/main/: CMakeLists.txt  ack_waiter.hpp  backlight_timer.hpp  base64.hpp  buffer_queue.hpp  cst328_driver.hpp  cst328_lvgl.hpp  esp_utility.hpp  frame_transport_selector.hpp  framer.hpp  idf_component.yml  lv_memory.hpp  lv_sync.hpp  lvgl_global_theme.hpp  lvgl_logging.hpp  main.cpp  protocol.hpp  sdspi.hpp  uart.hpp  uart_log_proto_forwarder.hpp  volume_display.hpp  waveshare_st7789.hpp  waveshare_st7789_lvgl.hpp
ControlPanel.Device/main/images/: audio_high_16.hpp  audio_muted_16.hpp
ControlPanel.Device/main/protocol/: frame_buffer.hpp  frame_host_connection.hpp  framer.hpp  protocol.hpp  utils.hpp
ControlPanel.Device/main/protocol/transport/: bt_uart_transport.hpp  frame_transport.hpp  uart_transport.hpp
ControlPanel.Device/main/ui/: flex_list.hpp  list_item.hpp  style.hpp
ControlPanel.Device/main/utils/: arduino_json_utils.hpp  esp_utility.hpp  lv_sync.hpp  lvgl_logging.hpp
(+132 files in other folders)
